src/test/ui/issues/issue-59494.stderr
error[E0277]: expected a `Fn<(_,)>` closure, found `impl Fn<(((_, _), _),)>`
  --> $DIR/issue-59494.rs:21:22
   |
LL |     let t8 = t8n(t7, t7p(f, g));
   |              ---     ^^^^^^^^^ expected an `Fn<(_,)>` closure, found `impl Fn<(((_, _), _),)>`
   |              |
   |              required by a bound introduced by this call
   |
   = help: the trait `Fn<(_,)>` is not implemented for `impl Fn<(((_, _), _),)>`
note: required by a bound in `t8n`
  --> $DIR/issue-59494.rs:5:45
   |
LL | fn t8n<A, B, C>(f: impl Fn(A) -> B, g: impl Fn(A) -> C) -> impl Fn(A) -> (B, C)
   |                                             ^^^^^^^^^^ required by this bound in `t8n`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
